Removed serial number field in Packer Practical Demo Pack

--- a/APFTestingServices/APFTestingServices.csproj
+++ b/APFTestingServices/APFTestingServices.csproj
@@ -47,9 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GeneratePdf.cs" />
+    <Compile Include="PdfGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SendEmail.cs" />
+    <Compile Include="EmailService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
