Got WCF working

--- a/APFTestingModel/APFTestingModel.csproj
+++ b/APFTestingModel/APFTestingModel.csproj
@@ -74,6 +74,7 @@
     <Compile Include="CandidatePilot.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="EmailServiceOperation.cs" />
     <Compile Include="Exam.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -266,6 +267,7 @@
       <DependentUpon>Model.edmx</DependentUpon>
       <LastGenOutput>Model.cs</LastGenOutput>
     </None>
+    <None Include="output.config" />
     <None Include="packages.config" />
     <None Include="Service References\EmailServiceReference\EmailServiceOperation.wsdl" />
     <None Include="Service References\EmailServiceReference\EmailServiceOperation.xsd">
