implemented packer question crud

--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -373,6 +373,9 @@
     <Content Include="Areas\Administration\Views\PracticalTemplatePacker\Edit.cshtml" />
     <Content Include="Areas\Administration\Views\PracticalTemplatePilot\Create.cshtml" />
     <Content Include="Areas\Administration\Views\PracticalTemplatePilot\Display.cshtml" />
+    <Content Include="Areas\Administration\Views\QuestionManagement\IndexPacker.cshtml" />
+    <Content Include="Areas\Administration\Views\QuestionManagement\CreatePacker.cshtml" />
+    <Content Include="Areas\Administration\Views\QuestionManagement\EditPacker.cshtml" />
     <None Include="Properties\PublishProfiles\APFTesting.pubxml" />
     <None Include="Properties\PublishProfiles\Default Settings.pubxml" />
     <None Include="Properties\PublishProfiles\Web Deploy - Staging [b].pubxml" />
