--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -344,6 +344,7 @@
     <Content Include="Images\logo-apf.png" />
     <Content Include="Images\sprite-input-buttons.png" />
     <Content Include="Images\sprite-input-buttons2.png" />
+    <Content Include="Images\tick.gif" />
     <Content Include="Images\tick.png" />
     <Content Include="Scripts\administration.js" />
     <Content Include="Scripts\candidate.js" />
@@ -473,6 +474,7 @@
     <None Include="Service References\EmailServiceReference\EmailServiceOperation3.xsd">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="Views\Account\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
