--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -206,8 +206,6 @@
     <Compile Include="Areas\Administration\Controllers\AssessmentTaskController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\CandidateController.cs" />
-    <Compile Include="Controllers\DummyPack.cs" />
-    <Compile Include="Controllers\DummyTask.cs" />
     <Compile Include="Controllers\PracticalController.cs" />
     <Compile Include="CustomValidation\DynamicRange.cs" />
     <Compile Include="Models\Candidate\ViewPacker.cs" />
@@ -222,7 +220,6 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\QuestionsController.cs" />
     <Compile Include="Controllers\ResetController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -441,13 +438,8 @@
     <Content Include="Views\Error\ServerError.cshtml" />
     <Content Include="Views\Exam\Start.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
-    <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
-    <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
     <Content Include="Views\Account\Manage.cshtml" />
     <Content Include="Views\Account\_ChangePasswordPartial.cshtml" />
-    <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
-    <Content Include="Views\Account\_RemoveExternalLoginsPartial.cshtml" />
-    <Content Include="Views\Account\_SetPasswordPartial.cshtml" />
     <Content Include="Views\Candidate\CreatePilot.cshtml" />
     <Content Include="Views\Candidate\EditPilot.cshtml" />
     <Content Include="Views\Candidate\ViewPilot.cshtml" />
@@ -460,7 +452,6 @@
     <Content Include="Views\Practical\PackerInput.cshtml" />
     <Content Include="Views\Practical\PackerEdit.cshtml" />
     <Content Include="Areas\Administration\Views\AssessmentTask\Index.cshtml" />
-    <Content Include="Views\Examiner\Login.cshtml" />
     <Content Include="Service References\EmailServiceReference\EmailServiceOperation.wsdl" />
     <None Include="Service References\EmailServiceReference\EmailServiceOperation.xsd">
       <SubType>Designer</SubType>
@@ -475,6 +466,7 @@
       <SubType>Designer</SubType>
     </None>
     <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Shared\_LogoffPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -514,9 +506,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-
           <DevelopmentServerPort>9592</DevelopmentServerPort>
-
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost:1979/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
