Finalise Exam UI and Controller added

--- a/APFTestingModel/APFTestingModel.csproj
+++ b/APFTestingModel/APFTestingModel.csproj
@@ -90,6 +90,7 @@
     <Compile Include="ExamPilot.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="ExamStateMachine\ExamFinalised.cs" />
     <Compile Include="Helpers\DataStructures.cs" />
     <Compile Include="ExamStateMachine\ExamCompleted.cs" />
     <Compile Include="ExamStateMachine\ExamCreated.cs" />
