--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -259,7 +259,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\images\cross.png" />
-    <Content Include="Content\images\img-q18-knots.jpg" />
+    <Content Include="QuestionImages\0.jpg" />
     <Content Include="Content\images\tick.png" />
     <Content Include="Content\PIE.htc" />
     <Content Include="Content\themes\base\images\animated-overlay.gif" />
@@ -346,7 +346,6 @@
     <Content Include="Images\sprite-input-buttons2.png" />
     <Content Include="Images\tick.gif" />
     <Content Include="Images\tick.png" />
-    <Content Include="QuestionImages\Alan.gif" />
     <Content Include="Scripts\administration.js" />
     <Content Include="Scripts\candidate.js" />
     <Content Include="Scripts\exam.js" />
