--- a/EmailService/EmailService.csproj
+++ b/EmailService/EmailService.csproj
@@ -106,6 +106,7 @@
     <None Include="Properties\PublishProfiles\APFTetingEmailService.pubxml" />
     <None Include="Properties\PublishProfiles\APF_Email_Service.pubxml" />
     <None Include="Properties\PublishProfiles\Default Settings.pubxml" />
+    <None Include="Properties\PublishProfiles\EmailService.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
