Added some styling for Theory Question [Admin] and added letters next to exam question answers [Candidate view]

--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -240,7 +240,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Site-v2.css" />
     <Content Include="Content\images\cross.png" />
+    <Content Include="Images\bg-btn-grey-hover.jpg" />
+    <Content Include="Images\bg-btn-grey.jpg" />
     <Content Include="Images\off.png" />
     <Content Include="Images\on.png" />
     <Content Include="QuestionImages\0.jpg" />
