--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Controllers\CandidateController.cs" />
     <Compile Include="Controllers\PracticalController.cs" />
     <Compile Include="Controllers\CompletedExamController.cs" />
+    <Compile Include="CustomValidation\BooleanMustBeTrueAttribute.cs" />
     <Compile Include="CustomValidation\DynamicRange.cs" />
     <Compile Include="Models\Candidate\ViewPacker.cs" />
     <Compile Include="Models\Candidate\ViewPilot.cs" />
@@ -246,6 +247,7 @@
     <Content Include="Images\bg-btn-grey.jpg" />
     <Content Include="Images\off.png" />
     <Content Include="Images\on.png" />
+    <Content Include="Images\review-checkbox-example.PNG" />
     <Content Include="QuestionImages\0.jpg" />
     <Content Include="Content\images\tick.png" />
     <Content Include="Content\PIE.htc" />
