--- a/APFTestingModel.Tests/APFTestingModel.Tests.csproj
+++ b/APFTestingModel.Tests/APFTestingModel.Tests.csproj
@@ -52,11 +52,13 @@
   <ItemGroup>
     <Compile Include="AnswerTest.cs" />
     <Compile Include="ExamTest.cs" />
-    <Compile Include="MockPossibleAnswer.cs" />
-    <Compile Include="MockPracticalComponentPilot.cs" />
-    <Compile Include="MockSelectedTheoryQuestion.cs" />
-    <Compile Include="MockTheoryComponentPilot.cs" />
+    <Compile Include="Mocks\MockPossibleAnswer.cs" />
+    <Compile Include="Mocks\MockPracticalComponentPilot.cs" />
+    <Compile Include="Mocks\MockSelectedTheoryQuestion.cs" />
+    <Compile Include="Mocks\MockTheoryComponentPilot.cs" />
     <Compile Include="PracticalComponentPackerTest.cs" />
+    <Compile Include="PracticalComponentTemplatePackerTests.cs" />
+    <Compile Include="PracticalComponentTemplatePilotTests.cs" />
     <Compile Include="SelectedAssessmentTaskTest.cs" />
     <Compile Include="TheoryComponentTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -78,9 +80,7 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Mocks\" />
-  </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
