Added some test methods and moved simple membership initialisation from Controllers to AppStart

--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -379,6 +379,7 @@
     <Content Include="Areas\Administration\Views\QuestionManagement\EditPacker.cshtml" />
     <Content Include="Areas\Administration\Views\QuestionManagement\DisplayPilot.cshtml" />
     <Content Include="Areas\Administration\Views\QuestionManagement\DisplayPacker.cshtml" />
+    <None Include="Properties\PublishProfiles\APF.pubxml" />
     <None Include="Properties\PublishProfiles\APFTesting.pubxml" />
     <None Include="Properties\PublishProfiles\Default Settings.pubxml" />
     <None Include="Properties\PublishProfiles\FTP-A.pubxml" />
